--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Downloads/ashot-1.5.4.jar"/>
 	<classpathentry kind="lib" path="C:/Downloads/commons-io-2.8.0.jar"/>
+	<classpathentry kind="lib" path="E:/Tamil - Studies doc/Eclipse/webdriver-manager-13.0.0-beta.jar"/>
+	<classpathentry kind="lib" path="E:/Tamil - Studies doc/Eclipse/webdrivermanager-4.3.1-fat.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
